[project]
name = "agentic-blog-generater"
version = "0.1.0"
description = "Agentic Blog generater"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
